--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -67,3 +67,11 @@
     @apply bg-background text-foreground;
   }
 }
+
+body {
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
